--- a/final_well_analysis.ipynb
+++ b/final_well_analysis.ipynb
@@ -57,6 +57,273 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, f1_score, confusion_matrix, classification_report, roc_curve, auc, precision_recall_curve, average_precision_score"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **2. Loading the Datasets**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Preview:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>amount_tsh</th>\n",
+       "      <th>date_recorded</th>\n",
+       "      <th>funder</th>\n",
+       "      <th>gps_height</th>\n",
+       "      <th>installer</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>wpt_name</th>\n",
+       "      <th>num_private</th>\n",
+       "      <th>...</th>\n",
+       "      <th>water_quality</th>\n",
+       "      <th>quality_group</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>quantity_group</th>\n",
+       "      <th>source</th>\n",
+       "      <th>source_type</th>\n",
+       "      <th>source_class</th>\n",
+       "      <th>waterpoint_type</th>\n",
+       "      <th>waterpoint_type_group</th>\n",
+       "      <th>status_group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>69572</td>\n",
+       "      <td>6000.0</td>\n",
+       "      <td>3/14/2011</td>\n",
+       "      <td>Roman</td>\n",
+       "      <td>1390</td>\n",
+       "      <td>Roman</td>\n",
+       "      <td>34.938093</td>\n",
+       "      <td>-9.856322</td>\n",
+       "      <td>none</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>soft</td>\n",
+       "      <td>good</td>\n",
+       "      <td>enough</td>\n",
+       "      <td>enough</td>\n",
+       "      <td>spring</td>\n",
+       "      <td>spring</td>\n",
+       "      <td>groundwater</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>functional</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8776</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3/6/2013</td>\n",
+       "      <td>Grumeti</td>\n",
+       "      <td>1399</td>\n",
+       "      <td>GRUMETI</td>\n",
+       "      <td>34.698766</td>\n",
+       "      <td>-2.147466</td>\n",
+       "      <td>Zahanati</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>soft</td>\n",
+       "      <td>good</td>\n",
+       "      <td>insufficient</td>\n",
+       "      <td>insufficient</td>\n",
+       "      <td>rainwater harvesting</td>\n",
+       "      <td>rainwater harvesting</td>\n",
+       "      <td>surface</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>functional</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>34310</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>2/25/2013</td>\n",
+       "      <td>Lottery Club</td>\n",
+       "      <td>686</td>\n",
+       "      <td>World vision</td>\n",
+       "      <td>37.460664</td>\n",
+       "      <td>-3.821329</td>\n",
+       "      <td>Kwa Mahundi</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>soft</td>\n",
+       "      <td>good</td>\n",
+       "      <td>enough</td>\n",
+       "      <td>enough</td>\n",
+       "      <td>dam</td>\n",
+       "      <td>dam</td>\n",
+       "      <td>surface</td>\n",
+       "      <td>communal standpipe multiple</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>functional</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>67743</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1/28/2013</td>\n",
+       "      <td>Unicef</td>\n",
+       "      <td>263</td>\n",
+       "      <td>UNICEF</td>\n",
+       "      <td>38.486161</td>\n",
+       "      <td>-11.155298</td>\n",
+       "      <td>Zahanati Ya Nanyumbu</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>soft</td>\n",
+       "      <td>good</td>\n",
+       "      <td>dry</td>\n",
+       "      <td>dry</td>\n",
+       "      <td>machine dbh</td>\n",
+       "      <td>borehole</td>\n",
+       "      <td>groundwater</td>\n",
+       "      <td>communal standpipe multiple</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>non functional</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19728</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7/13/2011</td>\n",
+       "      <td>Action In A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Artisan</td>\n",
+       "      <td>31.130847</td>\n",
+       "      <td>-1.825359</td>\n",
+       "      <td>Shuleni</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>soft</td>\n",
+       "      <td>good</td>\n",
+       "      <td>seasonal</td>\n",
+       "      <td>seasonal</td>\n",
+       "      <td>rainwater harvesting</td>\n",
+       "      <td>rainwater harvesting</td>\n",
+       "      <td>surface</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>functional</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  amount_tsh date_recorded        funder  gps_height     installer  \\\n",
+       "0  69572      6000.0     3/14/2011         Roman        1390         Roman   \n",
+       "1   8776         0.0      3/6/2013       Grumeti        1399       GRUMETI   \n",
+       "2  34310        25.0     2/25/2013  Lottery Club         686  World vision   \n",
+       "3  67743         0.0     1/28/2013        Unicef         263        UNICEF   \n",
+       "4  19728         0.0     7/13/2011   Action In A           0       Artisan   \n",
+       "\n",
+       "   longitude   latitude              wpt_name  num_private  ... water_quality  \\\n",
+       "0  34.938093  -9.856322                  none            0  ...          soft   \n",
+       "1  34.698766  -2.147466              Zahanati            0  ...          soft   \n",
+       "2  37.460664  -3.821329           Kwa Mahundi            0  ...          soft   \n",
+       "3  38.486161 -11.155298  Zahanati Ya Nanyumbu            0  ...          soft   \n",
+       "4  31.130847  -1.825359               Shuleni            0  ...          soft   \n",
+       "\n",
+       "  quality_group      quantity  quantity_group                source  \\\n",
+       "0          good        enough          enough                spring   \n",
+       "1          good  insufficient    insufficient  rainwater harvesting   \n",
+       "2          good        enough          enough                   dam   \n",
+       "3          good           dry             dry           machine dbh   \n",
+       "4          good      seasonal        seasonal  rainwater harvesting   \n",
+       "\n",
+       "            source_type source_class              waterpoint_type  \\\n",
+       "0                spring  groundwater           communal standpipe   \n",
+       "1  rainwater harvesting      surface           communal standpipe   \n",
+       "2                   dam      surface  communal standpipe multiple   \n",
+       "3              borehole  groundwater  communal standpipe multiple   \n",
+       "4  rainwater harvesting      surface           communal standpipe   \n",
+       "\n",
+       "  waterpoint_type_group    status_group  \n",
+       "0    communal standpipe      functional  \n",
+       "1    communal standpipe      functional  \n",
+       "2    communal standpipe      functional  \n",
+       "3    communal standpipe  non functional  \n",
+       "4    communal standpipe      functional  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " #Load the Datasets\n",
+    "train_values = pd.read_csv('Training_Set_Values.csv')\n",
+    "train_labels = pd.read_csv('Training_Set_Labels.csv')\n",
+    "data = train_values.merge(train_labels, on='id')\n",
+    "print(\"Data Preview:\")\n",
+    "data.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **3. Data Cleaning and Core Feature Selection**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select core numerical features\n",
+    "core_features = ['amount_tsh', 'gps_height', 'population', 'construction_year']\n",
+    "data = data[['status_group'] + core_features].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
