--- a/final_well_analysis.ipynb
+++ b/final_well_analysis.ipynb
@@ -315,7 +315,49 @@
    "source": [
     "# Select core numerical features\n",
     "core_features = ['amount_tsh', 'gps_height', 'population', 'construction_year']\n",
-    "data = data[['status_group'] + core_features].copy()"
+    "data = data[['status_group'] + core_features].copy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Cleaned Data Info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 59400 entries, 0 to 59399\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   status_group       59400 non-null  object \n",
+      " 1   amount_tsh         59400 non-null  float64\n",
+      " 2   gps_height         59400 non-null  int64  \n",
+      " 3   population         59400 non-null  int64  \n",
+      " 4   construction_year  59400 non-null  float64\n",
+      "dtypes: float64(2), int64(2), object(1)\n",
+      "memory usage: 2.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Replace zeros in 'construction_year' with NaN\n",
+    "data['construction_year'] = data['construction_year'].replace(0, np.nan)\n",
+    "\n",
+    "# Fill NaN values in 'construction_year' with the median\n",
+    "median_value = data['construction_year'].median()\n",
+    "data.loc[:, 'construction_year'] = data['construction_year'].fillna(median_value)\n",
+    "\n",
+    "# Drop rows with missing values\n",
+    "data.dropna(inplace=True)\n",
+    "\n",
+    "print(\"\\nCleaned Data Info:\")\n",
+    "data.info()\n"
    ]
   },
   {
