Encodedthe status_group column using LabelEncoder

--- a/final_well_analysis.ipynb
+++ b/final_well_analysis.ipynb
@@ -361,11 +361,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### **4. Encode the Target Variable**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Encoded Target Variable Distribution:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "status_group\n",
+       "0    32259\n",
+       "2    22824\n",
+       "1     4317\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "data['status_group'] = label_encoder.fit_transform(data['status_group'])\n",
+    "print(\"\\nEncoded Target Variable Distribution:\")\n",
+    "data['status_group'].value_counts()\n"
+   ]
   }
  ],
  "metadata": {
