Selected core features for modelling

--- a/final_well_analysis.ipynb
+++ b/final_well_analysis.ipynb
@@ -441,11 +441,65 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### **6. Training The Models**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### Training Models ###\n",
+      "1. Training Decision Tree Model...\n",
+      "Decision Tree Model Training Complete.\n",
+      "\n",
+      "2. Training Logistic Regression Model...\n",
+      "Logistic Regression Model Training Complete.\n",
+      "\n",
+      "3. Training Random Forest Model...\n",
+      "Random Forest Model Training Complete.\n",
+      "\n",
+      "### All Models Have Been Trained Successfully ###\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Initialize models\n",
+    "print(\"### Training Models ###\")\n",
+    "\n",
+    "### **Train Decision Tree Model**\n",
+    "print(\"1. Training Decision Tree Model...\")\n",
+    "dt_model = DecisionTreeClassifier(class_weight='balanced', random_state=42)\n",
+    "dt_model.fit(X_train, y_train)\n",
+    "print(\"Decision Tree Model Training Complete.\\n\")\n",
+    "\n",
+    "### **Train Logistic Regression Model**\n",
+    "print(\"2. Training Logistic Regression Model...\")\n",
+    "# Increased max_iter to ensure convergence for larger datasets\n",
+    "lr_model = LogisticRegression(max_iter=200, random_state=42)\n",
+    "lr_model.fit(X_train, y_train)\n",
+    "print(\"Logistic Regression Model Training Complete.\\n\")\n",
+    "\n",
+    "### **Train Random Forest Model**\n",
+    "print(\"3. Training Random Forest Model...\")\n",
+    "# Using 100 trees (default n_estimators) for balanced performance and speed\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "print(\"Random Forest Model Training Complete.\\n\")\n",
+    "\n",
+    "print(\"### All Models Have Been Trained Successfully ###\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
