Created train and validation feature matrices

--- a/final_well_analysis.ipynb
+++ b/final_well_analysis.ipynb
@@ -504,7 +504,50 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### **7. Evaluate Model Performance**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_dt = dt_model.predict(X_val)\n",
+    "y_pred_lr = lr_model.predict(X_val)\n",
+    "y_pred_rf = rf_model.predict(X_val)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Model  Accuracy  F1 Score\n",
+      "0        Decision Tree  0.450084  0.505658\n",
+      "1  Logistic Regression  0.592340  0.526043\n",
+      "2        Random Forest  0.634091  0.605501\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compare Accuracy and F1 Scores\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "\n",
+    "models = ['Decision Tree', 'Logistic Regression', 'Random Forest']\n",
+    "accuracies = [accuracy_score(y_val, y_pred_dt), accuracy_score(y_val, y_pred_lr), accuracy_score(y_val, y_pred_rf)]\n",
+    "f1_scores = [f1_score(y_val, y_pred_dt, average='weighted'),\n",
+    "             f1_score(y_val, y_pred_lr, average='weighted'),\n",
+    "             f1_score(y_val, y_pred_rf, average='weighted')]\n",
+    "\n",
+    "results = pd.DataFrame({'Model': models, 'Accuracy': accuracies, 'F1 Score': f1_scores})\n",
+    "print(results)"
+   ]
   }
  ],
  "metadata": {
