Evaluated model performance

--- a/final_well_analysis.ipynb
+++ b/final_well_analysis.ipynb
@@ -548,6 +548,69 @@
     "results = pd.DataFrame({'Model': models, 'Accuracy': accuracies, 'F1 Score': f1_scores})\n",
     "print(results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### Decision Tree Performance ###\n",
+      "Accuracy: 0.4500841750841751\n",
+      "F1 Score: 0.505658362327927\n",
+      "Confusion Matrix:\n",
+      " [[3041 2336 1075]\n",
+      " [ 243  477  143]\n",
+      " [ 980 1756 1829]]\n",
+      "\n",
+      "### Logistic Regression Performance ###\n",
+      "Accuracy: 0.5923400673400674\n",
+      "F1 Score: 0.5260430678033632\n",
+      "Confusion Matrix:\n",
+      " [[5882    0  570]\n",
+      " [ 719    0  144]\n",
+      " [3410    0 1155]]\n",
+      "\n",
+      "### Random Forest Performance ###\n",
+      "Accuracy: 0.634090909090909\n",
+      "F1 Score: 0.6055009171228577\n",
+      "Confusion Matrix:\n",
+      " [[5515  113  824]\n",
+      " [ 627   97  139]\n",
+      " [2571   73 1921]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from sklearn.metrics import accuracy_score, f1_score, confusion_matrix\n",
+    "\n",
+    "# Evaluate Decision Tree\n",
+    "print('### Decision Tree Performance ###')\n",
+    "print('Accuracy:', accuracy_score(y_val, y_pred_dt))\n",
+    "print('F1 Score:', f1_score(y_val, y_pred_dt, average='weighted'))\n",
+    "print('Confusion Matrix:\\n', confusion_matrix(y_val, y_pred_dt))\n",
+    "\n",
+    "# Evaluate Logistic Regression\n",
+    "print('\\n### Logistic Regression Performance ###')\n",
+    "print('Accuracy:', accuracy_score(y_val, y_pred_lr))\n",
+    "print('F1 Score:', f1_score(y_val, y_pred_lr, average='weighted'))\n",
+    "print('Confusion Matrix:\\n', confusion_matrix(y_val, y_pred_lr))\n",
+    "\n",
+    "# Evaluate Random Forest\n",
+    "print('\\n### Random Forest Performance ###')\n",
+    "print('Accuracy:', accuracy_score(y_val, y_pred_rf))\n",
+    "print('F1 Score:', f1_score(y_val, y_pred_rf, average='weighted'))\n",
+    "print('Confusion Matrix:\\n', confusion_matrix(y_val, y_pred_rf))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
