--- a/final_well_analysis.ipynb
+++ b/final_well_analysis.ipynb
@@ -872,6 +872,140 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **9. Hyperparameter Tuning for the Models**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### Hyperparameter Tuning: Decision Tree ###\n",
+      "Best Parameters for Decision Tree: {'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 2}\n",
+      "\n",
+      "Tuned Decision Tree Performance:\n",
+      "Accuracy: 0.45\n",
+      "F1 Score: 0.51\n",
+      "--------------------------------------------------\n",
+      "### Hyperparameter Tuning: Logistic Regression ###\n",
+      "Best Parameters for Logistic Regression: {'C': 0.01, 'solver': 'lbfgs'}\n",
+      "\n",
+      "Tuned Logistic Regression Performance:\n",
+      "Accuracy: 0.59\n",
+      "F1 Score: 0.53\n",
+      "--------------------------------------------------\n",
+      "### Hyperparameter Tuning: Random Forest ###\n",
+      "Best Parameters for Random Forest: {'n_estimators': 200, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_depth': None}\n",
+      "\n",
+      "Tuned Random Forest Performance:\n",
+      "Accuracy: 0.65\n",
+      "F1 Score: 0.61\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "\n",
+    "### **Hyperparameter Tuning for Decision Tree**\n",
+    "print(\"### Hyperparameter Tuning: Decision Tree ###\")\n",
+    "param_grid_dt = {\n",
+    "    'max_depth': [3, 5, 10, None],\n",
+    "    'min_samples_split': [2, 5, 10],\n",
+    "    'min_samples_leaf': [1, 2, 4]\n",
+    "}\n",
+    "\n",
+    "# Perform Grid Search\n",
+    "grid_dt = GridSearchCV(\n",
+    "    estimator=DecisionTreeClassifier(class_weight='balanced', random_state=42),\n",
+    "    param_grid=param_grid_dt,\n",
+    "    cv=5,\n",
+    "    scoring='f1_weighted'\n",
+    ")\n",
+    "grid_dt.fit(X_train, y_train)\n",
+    "\n",
+    "# Best Estimator and Predictions\n",
+    "print(\"Best Parameters for Decision Tree:\", grid_dt.best_params_)\n",
+    "dt_tuned = grid_dt.best_estimator_\n",
+    "y_pred_dt_tuned = dt_tuned.predict(X_val)\n",
+    "\n",
+    "# Evaluate Tuned Decision Tree\n",
+    "print(\"\\nTuned Decision Tree Performance:\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_val, y_pred_dt_tuned):.2f}\")\n",
+    "print(f\"F1 Score: {f1_score(y_val, y_pred_dt_tuned, average='weighted'):.2f}\")\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "### **Hyperparameter Tuning for Logistic Regression**\n",
+    "print(\"### Hyperparameter Tuning: Logistic Regression ###\")\n",
+    "param_grid_lr = {\n",
+    "    'C': [0.01, 0.1, 1, 10],\n",
+    "    'solver': ['liblinear', 'lbfgs']\n",
+    "}\n",
+    "\n",
+    "# Perform Grid Search\n",
+    "grid_lr = GridSearchCV(\n",
+    "    estimator=LogisticRegression(max_iter=200, random_state=42),\n",
+    "    param_grid=param_grid_lr,\n",
+    "    cv=5,\n",
+    "    scoring='f1_weighted'\n",
+    ")\n",
+    "grid_lr.fit(X_train, y_train)\n",
+    "\n",
+    "# Best Estimator and Predictions\n",
+    "print(\"Best Parameters for Logistic Regression:\", grid_lr.best_params_)\n",
+    "lr_tuned = grid_lr.best_estimator_\n",
+    "y_pred_lr_tuned = lr_tuned.predict(X_val)\n",
+    "\n",
+    "# Evaluate Tuned Logistic Regression\n",
+    "print(\"\\nTuned Logistic Regression Performance:\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_val, y_pred_lr_tuned):.2f}\")\n",
+    "print(f\"F1 Score: {f1_score(y_val, y_pred_lr_tuned, average='weighted'):.2f}\")\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "print(\"### Hyperparameter Tuning: Random Forest ###\")\n",
+    "param_grid_rf = {\n",
+    "    'n_estimators': [100, 200],        # Reduced range\n",
+    "    'max_depth': [None, 10],           # Simplified depth\n",
+    "    'min_samples_split': [2, 5], \n",
+    "    'min_samples_leaf': [1, 2]\n",
+    "}\n",
+    "\n",
+    "# Perform Randomized Search with reduced CV and parallel processing\n",
+    "grid_rf = RandomizedSearchCV(\n",
+    "    estimator=RandomForestClassifier(random_state=42),\n",
+    "    param_distributions=param_grid_rf,\n",
+    "    n_iter=10,      # Randomly test 10 combinations\n",
+    "    cv=3,           # Reduced CV folds\n",
+    "    scoring='f1_weighted',\n",
+    "    n_jobs=-1,      # Parallel processing\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "grid_rf.fit(X_train, y_train)\n",
+    "\n",
+    "# Best Estimator and Predictions\n",
+    "print(\"Best Parameters for Random Forest:\", grid_rf.best_params_)\n",
+    "rf_tuned = grid_rf.best_estimator_\n",
+    "y_pred_rf_tuned = rf_tuned.predict(X_val)\n",
+    "\n",
+    "# Evaluate Tuned Random Forest\n",
+    "print(\"\\nTuned Random Forest Performance:\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_val, y_pred_rf_tuned):.2f}\")\n",
+    "print(f\"F1 Score: {f1_score(y_val, y_pred_rf_tuned, average='weighted'):.2f}\")\n",
+    "print(\"-\" * 50)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
