Used the best performing model to generate predictions on unseen data

--- a/final_well_analysis.ipynb
+++ b/final_well_analysis.ipynb
@@ -1603,6 +1603,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **13. Final Model Predictions on Test Data**\n",
+    "\n",
+    "#### In this section, we use the best-performing model to generate predictions on unseen test data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions have been saved to 'final_predictions.csv'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load test data\n",
+    "test_dataset_path = \"Test_Set_Values.csv\"\n",
+    "test_data = pd.read_csv(test_dataset_path)\n",
+    "\n",
+    "# Prepare test data using selected features\n",
+    "features = X.columns  # Features used in training\n",
+    "X_test = test_data[features].copy()\n",
+    "X_test = X_test.fillna(0)  # Handling missing values\n",
+    "\n",
+    "# Generate predictions\n",
+    "test_predictions = rf_tuned.predict(X_test)\n",
+    "\n",
+    "# Convert predictions back to original labels\n",
+    "test_data['Predicted_Status'] = label_encoder.inverse_transform(test_predictions)\n",
+    "\n",
+    "# Save predictions to CSV\n",
+    "output_file = \"final_predictions.csv\"\n",
+    "test_data[['id', 'Predicted_Status']].to_csv(output_file, index=False)\n",
+    "\n",
+    "print(f\"Predictions have been saved to '{output_file}'.\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
