--- a/final_well_analysis.ipynb
+++ b/final_well_analysis.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -648,23 +648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.font_manager.FontManager at 0x16a799c5090>"
+       "<matplotlib.font_manager.FontManager at 0x2a868fd2c80>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -919,22 +912,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Hyperparameter Tuning: Decision Tree ###\n"
+      "### Hyperparameter Tuning: Decision Tree ###\n",
+      "Best Parameters for Decision Tree: {'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 2}\n",
+      "\n",
+      "Tuned Decision Tree Performance:\n",
+      "Accuracy: 0.45\n",
+      "F1 Score: 0.51\n",
+      "--------------------------------------------------\n",
+      "### Hyperparameter Tuning: Logistic Regression ###\n",
+      "Best Parameters for Logistic Regression: {'classifier__C': 1, 'classifier__solver': 'lbfgs'}\n",
+      "\n",
+      "Tuned Logistic Regression Performance:\n",
+      "Accuracy: 0.59\n",
+      "F1 Score: 0.53\n",
+      "--------------------------------------------------\n",
+      "### Hyperparameter Tuning: Random Forest ###\n",
+      "Best Parameters for Random Forest: {'n_estimators': 200, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_depth': None}\n",
+      "\n",
+      "Tuned Random Forest Performance:\n",
+      "Accuracy: 0.64\n",
+      "F1 Score: 0.61\n",
+      "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "### **Hyperparameter Tuning for Decision Tree**\n",
+    "### Preprocessing Pipeline ###\n",
+    "numeric_features = ['amount_tsh', 'gps_height', 'population', 'well_age']\n",
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    ('scaler', StandardScaler())\n",
+    "])\n",
+    "\n",
+    "preprocessor = ColumnTransformer(transformers=[\n",
+    "    ('num', numeric_transformer, numeric_features)\n",
+    "])\n",
+    "\n",
+    "### Hyperparameter Tuning for Decision Tree ###\n",
     "print(\"### Hyperparameter Tuning: Decision Tree ###\")\n",
     "param_grid_dt = {\n",
     "    'max_depth': [3, 5, 10, None],\n",
@@ -942,7 +971,6 @@
     "    'min_samples_leaf': [1, 2, 4]\n",
     "}\n",
     "\n",
-    "# Perform Grid Search\n",
     "grid_dt = GridSearchCV(\n",
     "    estimator=DecisionTreeClassifier(class_weight='balanced', random_state=42),\n",
     "    param_grid=param_grid_dt,\n",
@@ -951,73 +979,69 @@
     ")\n",
     "grid_dt.fit(X_train, y_train)\n",
     "\n",
-    "# Best Estimator and Predictions\n",
     "print(\"Best Parameters for Decision Tree:\", grid_dt.best_params_)\n",
     "dt_tuned = grid_dt.best_estimator_\n",
     "y_pred_dt_tuned = dt_tuned.predict(X_val)\n",
     "\n",
-    "# Evaluate Tuned Decision Tree\n",
     "print(\"\\nTuned Decision Tree Performance:\")\n",
     "print(f\"Accuracy: {accuracy_score(y_val, y_pred_dt_tuned):.2f}\")\n",
     "print(f\"F1 Score: {f1_score(y_val, y_pred_dt_tuned, average='weighted'):.2f}\")\n",
     "print(\"-\" * 50)\n",
     "\n",
-    "### **Hyperparameter Tuning for Logistic Regression**\n",
+    "### Hyperparameter Tuning for Logistic Regression ###\n",
     "print(\"### Hyperparameter Tuning: Logistic Regression ###\")\n",
     "param_grid_lr = {\n",
     "    'C': [0.01, 0.1, 1, 10],\n",
     "    'solver': ['liblinear', 'lbfgs']\n",
     "}\n",
     "\n",
-    "# Perform Grid Search\n",
+    "lr_pipeline = Pipeline(steps=[\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('classifier', LogisticRegression(max_iter=500, random_state=42))  # Increased max_iter\n",
+    "])\n",
+    "\n",
     "grid_lr = GridSearchCV(\n",
-    "    estimator=LogisticRegression(max_iter=200, random_state=42),\n",
-    "    param_grid=param_grid_lr,\n",
+    "    estimator=lr_pipeline,\n",
+    "    param_grid={'classifier__C': [0.01, 0.1, 1, 10],\n",
+    "                'classifier__solver': ['liblinear', 'lbfgs']},\n",
     "    cv=5,\n",
     "    scoring='f1_weighted'\n",
     ")\n",
     "grid_lr.fit(X_train, y_train)\n",
     "\n",
-    "# Best Estimator and Predictions\n",
     "print(\"Best Parameters for Logistic Regression:\", grid_lr.best_params_)\n",
     "lr_tuned = grid_lr.best_estimator_\n",
     "y_pred_lr_tuned = lr_tuned.predict(X_val)\n",
     "\n",
-    "# Evaluate Tuned Logistic Regression\n",
     "print(\"\\nTuned Logistic Regression Performance:\")\n",
     "print(f\"Accuracy: {accuracy_score(y_val, y_pred_lr_tuned):.2f}\")\n",
     "print(f\"F1 Score: {f1_score(y_val, y_pred_lr_tuned, average='weighted'):.2f}\")\n",
     "print(\"-\" * 50)\n",
     "\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "\n",
+    "### Hyperparameter Tuning for Random Forest ###\n",
     "print(\"### Hyperparameter Tuning: Random Forest ###\")\n",
     "param_grid_rf = {\n",
-    "    'n_estimators': [100, 200],        # Reduced range\n",
-    "    'max_depth': [None, 10],           # Simplified depth\n",
+    "    'n_estimators': [100, 200],        \n",
+    "    'max_depth': [None, 10],           \n",
     "    'min_samples_split': [2, 5], \n",
     "    'min_samples_leaf': [1, 2]\n",
     "}\n",
     "\n",
-    "# Perform Randomized Search with reduced CV and parallel processing\n",
     "grid_rf = RandomizedSearchCV(\n",
     "    estimator=RandomForestClassifier(random_state=42),\n",
     "    param_distributions=param_grid_rf,\n",
-    "    n_iter=10,      # Randomly test 10 combinations\n",
-    "    cv=3,           # Reduced CV folds\n",
+    "    n_iter=10,\n",
+    "    cv=3,\n",
     "    scoring='f1_weighted',\n",
-    "    n_jobs=-1,      # Parallel processing\n",
+    "    n_jobs=-1,\n",
     "    random_state=42\n",
     ")\n",
-    "\n",
     "grid_rf.fit(X_train, y_train)\n",
     "\n",
-    "# Best Estimator and Predictions\n",
     "print(\"Best Parameters for Random Forest:\", grid_rf.best_params_)\n",
     "rf_tuned = grid_rf.best_estimator_\n",
     "y_pred_rf_tuned = rf_tuned.predict(X_val)\n",
     "\n",
-    "# Evaluate Tuned Random Forest\n",
     "print(\"\\nTuned Random Forest Performance:\")\n",
     "print(f\"Accuracy: {accuracy_score(y_val, y_pred_rf_tuned):.2f}\")\n",
     "print(f\"F1 Score: {f1_score(y_val, y_pred_rf_tuned, average='weighted'):.2f}\")\n",
