--- a/final_well_analysis.ipynb
+++ b/final_well_analysis.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -648,16 +648,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.font_manager.FontManager at 0x2a8235b5060>"
+       "<matplotlib.font_manager.FontManager at 0x153fdc08c40>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1876,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
